[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "beautifulsoup4==4.12.3",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "telegram>=0.0.1",
]
